@@ -4,6 +4,8 @@ Changes in version 0.97
 - Completely rewrote header handling, improving its handling of headers
   split across multiple lines among other things.
 
+- Added support for omitting parts of the copied headers.
+
 Development of this version has been sponsored by FutureQuest, Inc.
 ossi@FutureQuest.net  http://www.FutureQuest.net/
 -------------------------------------------------------------------------------
